src/OpenCvSharp.Native/include/open_cv_sharp/calib3d/calib3d.h

typedef struct jyppx_ocv_stereo_sgbm jyppx_ocv_stereo_sgbm;
typedef struct jyppx_ocv_stereo_matcher jyppx_ocv_stereo_matcher;
typedef struct jyppx_ocv_calib3d_subdiv2d jyppx_ocv_calib3d_subdiv2d;
typedef struct jyppx_ocv_calib3d_point2f
{
    float x;
    float y;
} jyppx_ocv_calib3d_point2f;
typedef struct jyppx_ocv_calib3d_vec4f
{
    float v0;
    float v1;
    float v2;
    float v3;
} jyppx_ocv_calib3d_vec4f;
typedef struct jyppx_ocv_calib3d_vec6f
{
    float v0;
    float v1;
    float v2;
    float v3;
    float v4;
    float v5;
} jyppx_ocv_calib3d_vec6f;
typedef struct jyppx_ocv_calib3d_usac_params
{
    double confidence;
    int is_parallel;
    int lo_iterations;
    int lo_method;
    int lo_sample_size;
    int max_iterations;
    int neighbors_search;
    int random_generator_state;
    int sampler;
    int score;
    double threshold;
    int final_polisher;
    int final_polisher_iterations;
} jyppx_ocv_calib3d_usac_params;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_create(
    jyppx_ocv_calib3d_subdiv2d** subdiv);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_create_rect(
    int x, int y, int width, int height, jyppx_ocv_calib3d_subdiv2d** subdiv);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_create_rect2f(
    float x, float y, float width, float height, jyppx_ocv_calib3d_subdiv2d** subdiv);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_calib3d_subdiv2d_release(
    jyppx_ocv_calib3d_subdiv2d* subdiv);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_init_delaunay(
    jyppx_ocv_calib3d_subdiv2d* subdiv, int x, int y, int width, int height);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_init_delaunay_rect2f(
    jyppx_ocv_calib3d_subdiv2d* subdiv, float x, float y, float width, float height);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_insert(
    jyppx_ocv_calib3d_subdiv2d* subdiv, float x, float y, int* vertex);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_insert_points(
    jyppx_ocv_calib3d_subdiv2d* subdiv, const jyppx_ocv_calib3d_point2f* points, int point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_locate(
    jyppx_ocv_calib3d_subdiv2d* subdiv, float x, float y, int* location, int* edge, int* vertex);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_find_nearest(
    jyppx_ocv_calib3d_subdiv2d* subdiv, float x, float y, int* vertex, float* nearest_x, float* nearest_y);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_get_edge_list_count(
    const jyppx_ocv_calib3d_subdiv2d* subdiv, int* count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_get_edge_list_fill(
    const jyppx_ocv_calib3d_subdiv2d* subdiv, jyppx_ocv_calib3d_vec4f* values, int capacity);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_get_leading_edge_list_count(
    const jyppx_ocv_calib3d_subdiv2d* subdiv, int* count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_get_leading_edge_list_fill(
    const jyppx_ocv_calib3d_subdiv2d* subdiv, int* values, int capacity);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_get_triangle_list_count(
    const jyppx_ocv_calib3d_subdiv2d* subdiv, int* count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_get_triangle_list_fill(
    const jyppx_ocv_calib3d_subdiv2d* subdiv, jyppx_ocv_calib3d_vec6f* values, int capacity);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_get_voronoi_facet_list_count(
    jyppx_ocv_calib3d_subdiv2d* subdiv, const int* indices, int index_count, int* facet_count, int* point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_get_voronoi_facet_list_fill(
    jyppx_ocv_calib3d_subdiv2d* subdiv,
    const int* indices,
    int index_count,
    int* facet_offsets,
    int facet_offset_capacity,
    jyppx_ocv_calib3d_point2f* points,
    int point_capacity,
    jyppx_ocv_calib3d_point2f* centers,
    int center_capacity);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_get_vertex(
    const jyppx_ocv_calib3d_subdiv2d* subdiv, int vertex, float* x, float* y, int* first_edge);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_get_edge(
    const jyppx_ocv_calib3d_subdiv2d* subdiv, int edge, int next_edge_type, int* related_edge);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_next_edge(
    const jyppx_ocv_calib3d_subdiv2d* subdiv, int edge, int* next_edge);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_rotate_edge(
    const jyppx_ocv_calib3d_subdiv2d* subdiv, int edge, int rotate, int* rotated_edge);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_sym_edge(
    const jyppx_ocv_calib3d_subdiv2d* subdiv, int edge, int* symmetric_edge);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_edge_org(
    const jyppx_ocv_calib3d_subdiv2d* subdiv, int edge, int* vertex, float* x, float* y);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_subdiv2d_edge_dst(
    const jyppx_ocv_calib3d_subdiv2d* subdiv, int edge, int* vertex, float* x, float* y);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_usac_params_get_default(
    jyppx_ocv_calib3d_usac_params* params);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_find_homography_usac(
    const jyppx_ocv_mat* src_points,
    const jyppx_ocv_mat* dst_points,
    jyppx_ocv_mat* mask,
    const jyppx_ocv_calib3d_usac_params* params,
    jyppx_ocv_mat** homography);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_solve_pnp_ransac_usac(
    const jyppx_ocv_mat* object_points,
    const jyppx_ocv_mat* image_points,
    jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    jyppx_ocv_mat* rvec,
    jyppx_ocv_mat* tvec,
    jyppx_ocv_mat* inliers,
    const jyppx_ocv_calib3d_usac_params* params,
    int* solved);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_find_fundamental_mat_usac(
    const jyppx_ocv_mat* points1,
    const jyppx_ocv_mat* points2,
    jyppx_ocv_mat* mask,
    const jyppx_ocv_calib3d_usac_params* params,
    jyppx_ocv_mat** fundamental);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_stereo_matcher_release(
    jyppx_ocv_stereo_matcher* stereo_matcher);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_matcher_compute(
    jyppx_ocv_stereo_matcher* stereo_matcher,
    const jyppx_ocv_mat* left,
    const jyppx_ocv_mat* right,
    jyppx_ocv_mat* disparity);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_matcher_get_min_disparity(const jyppx_ocv_stereo_matcher* stereo_matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_matcher_set_min_disparity(jyppx_ocv_stereo_matcher* stereo_matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_matcher_get_num_disparities(const jyppx_ocv_stereo_matcher* stereo_matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_matcher_set_num_disparities(jyppx_ocv_stereo_matcher* stereo_matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_matcher_get_block_size(const jyppx_ocv_stereo_matcher* stereo_matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_matcher_set_block_size(jyppx_ocv_stereo_matcher* stereo_matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_matcher_get_speckle_window_size(const jyppx_ocv_stereo_matcher* stereo_matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_matcher_set_speckle_window_size(jyppx_ocv_stereo_matcher* stereo_matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_matcher_get_speckle_range(const jyppx_ocv_stereo_matcher* stereo_matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_matcher_set_speckle_range(jyppx_ocv_stereo_matcher* stereo_matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_matcher_get_disp12_max_diff(const jyppx_ocv_stereo_matcher* stereo_matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_matcher_set_disp12_max_diff(jyppx_ocv_stereo_matcher* stereo_matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_get_p1(const jyppx_ocv_stereo_sgbm* stereo_sgbm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_set_p1(jyppx_ocv_stereo_sgbm* stereo_sgbm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_get_p2(const jyppx_ocv_stereo_sgbm* stereo_sgbm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_set_p2(jyppx_ocv_stereo_sgbm* stereo_sgbm, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_get_mode(const jyppx_ocv_stereo_sgbm* stereo_sgbm, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stereo_sgbm_set_mode(jyppx_ocv_stereo_sgbm* stereo_sgbm, int value);