src/OpenCvSharp/Internal/Interop/NativeMethods.Calib3D.LibraryImport.cs


        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_get_p1")]
        internal static partial int StereoSGBMGetP1(IntPtr stereoSGBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_set_p1")]
        internal static partial int StereoSGBMSetP1(IntPtr stereoSGBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_get_p2")]
        internal static partial int StereoSGBMGetP2(IntPtr stereoSGBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_set_p2")]
        internal static partial int StereoSGBMSetP2(IntPtr stereoSGBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_get_mode")]
        internal static partial int StereoSGBMGetMode(IntPtr stereoSGBM, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_sgbm_set_mode")]
        internal static partial int StereoSGBMSetMode(IntPtr stereoSGBM, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_matcher_release")]
        internal static partial void StereoMatcherRelease(IntPtr stereoMatcher);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_matcher_compute")]
        internal static partial int StereoMatcherCompute(IntPtr stereoMatcher, IntPtr left, IntPtr right, IntPtr disparity);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_matcher_get_min_disparity")]
        internal static partial int StereoMatcherGetMinDisparity(IntPtr stereoMatcher, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_matcher_set_min_disparity")]
        internal static partial int StereoMatcherSetMinDisparity(IntPtr stereoMatcher, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_matcher_get_num_disparities")]
        internal static partial int StereoMatcherGetNumDisparities(IntPtr stereoMatcher, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_matcher_set_num_disparities")]
        internal static partial int StereoMatcherSetNumDisparities(IntPtr stereoMatcher, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_matcher_get_block_size")]
        internal static partial int StereoMatcherGetBlockSize(IntPtr stereoMatcher, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_matcher_set_block_size")]
        internal static partial int StereoMatcherSetBlockSize(IntPtr stereoMatcher, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_matcher_get_speckle_window_size")]
        internal static partial int StereoMatcherGetSpeckleWindowSize(IntPtr stereoMatcher, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_matcher_set_speckle_window_size")]
        internal static partial int StereoMatcherSetSpeckleWindowSize(IntPtr stereoMatcher, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_matcher_get_speckle_range")]
        internal static partial int StereoMatcherGetSpeckleRange(IntPtr stereoMatcher, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_matcher_set_speckle_range")]
        internal static partial int StereoMatcherSetSpeckleRange(IntPtr stereoMatcher, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_matcher_get_disp12_max_diff")]
        internal static partial int StereoMatcherGetDisp12MaxDiff(IntPtr stereoMatcher, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_stereo_matcher_set_disp12_max_diff")]
        internal static partial int StereoMatcherSetDisp12MaxDiff(IntPtr stereoMatcher, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_create")]
        internal static partial int Calib3DSubdiv2DCreate(out IntPtr subdiv);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_create_rect")]
        internal static partial int Calib3DSubdiv2DCreateRect(int x, int y, int width, int height, out IntPtr subdiv);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_create_rect2f")]
        internal static partial int Calib3DSubdiv2DCreateRect2f(float x, float y, float width, float height, out IntPtr subdiv);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_release")]
        internal static partial void Calib3DSubdiv2DRelease(IntPtr subdiv);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_init_delaunay")]
        internal static partial int Calib3DSubdiv2DInitDelaunay(IntPtr subdiv, int x, int y, int width, int height);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_init_delaunay_rect2f")]
        internal static partial int Calib3DSubdiv2DInitDelaunayRect2f(IntPtr subdiv, float x, float y, float width, float height);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_insert")]
        internal static partial int Calib3DSubdiv2DInsert(IntPtr subdiv, float x, float y, out int vertex);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_insert_points")]
        internal static partial int Calib3DSubdiv2DInsertPoints(IntPtr subdiv, Calib3DPoint2fNative* points, int pointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_locate")]
        internal static partial int Calib3DSubdiv2DLocate(IntPtr subdiv, float x, float y, out int location, out int edge, out int vertex);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_find_nearest")]
        internal static partial int Calib3DSubdiv2DFindNearest(IntPtr subdiv, float x, float y, out int vertex, out float nearestX, out float nearestY);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_get_edge_list_count")]
        internal static partial int Calib3DSubdiv2DGetEdgeListCount(IntPtr subdiv, out int count);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_get_edge_list_fill")]
        internal static partial int Calib3DSubdiv2DGetEdgeListFill(IntPtr subdiv, Calib3DVec4fNative* values, int capacity);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_get_leading_edge_list_count")]
        internal static partial int Calib3DSubdiv2DGetLeadingEdgeListCount(IntPtr subdiv, out int count);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_get_leading_edge_list_fill")]
        internal static partial int Calib3DSubdiv2DGetLeadingEdgeListFill(IntPtr subdiv, int* values, int capacity);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_get_triangle_list_count")]
        internal static partial int Calib3DSubdiv2DGetTriangleListCount(IntPtr subdiv, out int count);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_get_triangle_list_fill")]
        internal static partial int Calib3DSubdiv2DGetTriangleListFill(IntPtr subdiv, Calib3DVec6fNative* values, int capacity);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_get_voronoi_facet_list_count")]
        internal static partial int Calib3DSubdiv2DGetVoronoiFacetListCount(IntPtr subdiv, int* indices, int indexCount, out int facetCount, out int pointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_get_voronoi_facet_list_fill")]
        internal static partial int Calib3DSubdiv2DGetVoronoiFacetListFill(IntPtr subdiv, int* indices, int indexCount, int* facetOffsets, int facetOffsetCapacity, Calib3DPoint2fNative* points, int pointCapacity, Calib3DPoint2fNative* centers, int centerCapacity);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_get_vertex")]
        internal static partial int Calib3DSubdiv2DGetVertex(IntPtr subdiv, int vertex, out float x, out float y, out int firstEdge);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_get_edge")]
        internal static partial int Calib3DSubdiv2DGetEdge(IntPtr subdiv, int edge, int nextEdgeType, out int relatedEdge);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_next_edge")]
        internal static partial int Calib3DSubdiv2DNextEdge(IntPtr subdiv, int edge, out int nextEdge);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_rotate_edge")]
        internal static partial int Calib3DSubdiv2DRotateEdge(IntPtr subdiv, int edge, int rotate, out int rotatedEdge);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_sym_edge")]
        internal static partial int Calib3DSubdiv2DSymEdge(IntPtr subdiv, int edge, out int symmetricEdge);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_edge_org")]
        internal static partial int Calib3DSubdiv2DEdgeOrg(IntPtr subdiv, int edge, out int vertex, out float x, out float y);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_subdiv2d_edge_dst")]
        internal static partial int Calib3DSubdiv2DEdgeDst(IntPtr subdiv, int edge, out int vertex, out float x, out float y);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_usac_params_get_default")]
        internal static partial int Calib3DUsacParamsGetDefault(out Calib3DUsacParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_find_homography_usac")]
        internal static partial int Calib3DFindHomographyUsac(IntPtr srcPoints, IntPtr dstPoints, IntPtr mask, Calib3DUsacParamsNative* parameters, out IntPtr homography);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_solve_pnp_ransac_usac")]
        internal static partial int Calib3DSolvePnPRansacUsac(IntPtr objectPoints, IntPtr imagePoints, IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr rvec, IntPtr tvec, IntPtr inliers, Calib3DUsacParamsNative* parameters, out int solved);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_find_fundamental_mat_usac")]
        internal static partial int Calib3DFindFundamentalMatUsac(IntPtr points1, IntPtr points2, IntPtr mask, Calib3DUsacParamsNative* parameters, out IntPtr fundamental);
